TrackDatabaseMemory class: use ArrayList instead of LinkedList (better iteration performance); (semi) intelligent capacity management